--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
