--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-on-heroku = "*"
 gunicorn = "*"
 django-address = "*"
 django-toolbelt = "*"
+boto3 = "*"
+django-storages = "*"
 
 [dev-packages]
 
