--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
